css/style.css
/* Color Theme Swatches in Hex */

.deep-tropical-remix-1-hex {
    color: #041701;
}

.deep-tropical-remix-2-hex {
    color: #265902;
}

.deep-tropical-remix-3-hex {
    color: #214001;
}

.deep-tropical-remix-4-hex {
    color: #83A603;
}

.deep-tropical-remix-5-hex {
    color: #0D0D0D;
}

hr {
    border-color: black;
}

/* fonts */

@font-face {
    font-family: ubuntu;
    src: url(../fonts/ubuntu/Ubuntu-Regular.ttf)
}

@font-face {
    font-family: abel;
    src: url(../fonts/abel/Abel-Regular.ttf)
}

/* general */

html {
    scroll-behavior: smooth;
}

body {
    /* background-color: #041701; */
    background-image: linear-gradient(#0D0D0D, #041701);
    background-attachment: fixed;
    background-size:100vw 100vh;
    color: #D2D9D8;
    margin: 0;
    padding: 0;
    font-family: 'abel', sans-serif;
    font-size: 1.2em;
}

h1, h2, h3, h4 {
    font-family: 'ubuntu', sans-serif;
    color: #D2D9D8;
}

.menulink {
    text-decoration: none;
    font-family: 'ubuntu', sans-serif;
    color: #D2D9D8;
    padding: 5px;
    background-color: transparent;
}

.menulink:hover {
    color: #83A603;
    background-color: transparent;
}

#submit {
    /* box-shadow: 0px 1px 0px 0px #1c1b18; */
    /* background:linear-gradient(to bottom, #eae0c2 5%, #ccc2a6 100%); */
    font-family: 'abel', sans-serif;
    background-color: transparent;
    border-radius: 10px;
    border: 2px solid #D2D9D8;
    display: inline-block;
    cursor: pointer;
    color: #D2D9D8;
    font-size: 1em;
    /* font-weight:bold; */
    padding: 12px 16px;
    text-decoration: none;
    /* text-shadow:0px 1px 0px #ffffff; */
}

#submit:hover {
    /* box-shadow: 0px 1px 0px 0px #1c1b18; */
    /* background:linear-gradient(to bottom, #eae0c2 5%, #ccc2a6 100%); */
    font-family: 'abel', sans-serif;
    background-color: transparent;
    border-radius: 10px;
    border: 2px solid #83A603;
    display: inline-block;
    cursor: pointer;
    color: #83A603;
    font-size: 1em;
    /* font-weight:bold; */
    padding: 12px 16px;
    text-decoration: none;
    /* text-shadow:0px 1px 0px #3E608C;; */
}

.title {
    width: 100%;
    text-align: center;
}

.title::first-letter {
    color: #83A603;
}

.blueText {
    color: #83A603;
}

.section {
    padding-top: 50px;
}

/* header */

.link {
    padding-left: 20px;
    padding-right: 20px;
}

header {
    background-image: url("../assets/code_review.jpeg");
    min-height: 40vh;
}

nav {
    background-color: #0D0D0D;
    position: fixed;
    width: 100%;
    height: 60px;
    display: flex;
    align-items: center;
    justify-content: space-between;
    z-index: 1;
}

#headerTextContainer {
    text-align: center;
    padding-top: 60px;
}

.menuDiv {
    padding: 15px;
}

.headtext {
    padding: 10px;
}

/* section1 */

#section1 {
    padding-top: 0;
}

/* flickity style */

.carousel-cell {
    width: 50%;
    /* half-width */
    max-height: 400px;
    margin-right: 10px;
    background-color: #0D0D0D;
    overflow: hidden;
    border-radius: 5px;
}

.flickity-button {
    background: rgba(0, 0, 0, 0.3);
}

.flickity-button:hover {
    background: rgba(0, 0, 0, 0.7);
}

.flickity-prev-next-button {
    width: 100px;
    height: 100%;
    border-radius: 0%;
}

.flickity-prev-next-button.previous {
    left: 0px;
}

.flickity-prev-next-button.next {
    right: 0px;
}

.flickity-button-icon {
    fill: #D2D9D8;
}

.flickity-button-icon:hover {
    fill: #83A603;
}

/* carousel image width */

.car {
    width: 100%;
    padding: 0;
}

/* position dots up a bit */

.flickity-page-dots {
    bottom: -22px;
}

/* dots are lines */

.flickity-page-dots .dot {
    height: 4px;
    width: 40px;
    margin: 0;
    border-radius: 0;
}

.carlink {
    padding: 0;
}

/* section2 */

/* section3 */

#section3, #section2 {
    width: 60%;
    margin: auto;
}

/* subdivision 2 columns */

.curriculumDivider {
    display: flex;
    justify-content: space-around;
}

.curriculumFlex {
    width: 30%;
    margin: 10px;
}
.curriculumFlex50 {
    width: 50%;
    margin: 10px;
}

/* progress-bars */

.w3-blue {
    background-color: #83A603 !important;
}

.w3-light-grey {
    background-color: #D2D9D8;
}

.w3-round-xlarge {
    margin-top: 10px;
    margin-bottom: 10px;
}

.progressBarContainer {
    width: 65%;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 20px
}

/* ul style */

ul {
    list-style: none;
}

ul li::before {
    content: "\2022";
    color: #83A603;
    font-weight: bold;
    display: inline-block;
    width: 1em;
    margin-left: -1em;
}

/* section4 */

#section4 {
    width: 65%;
    margin-left: auto;
    margin-right: auto;
}

input, textarea {
    width: 100%;
    border-radius: 5px;
    box-shadow: none;
    border-style: none;
    padding-top: 10px;
    padding-bottom: 10px;
    margin-top: 10px;
    margin-bottom: 10px;
    border: 1px solid #83A603;
}

/* footer */

footer {
    background-color: #0D0D0D;
    text-align: center;
    height: 30px;
    width: 100%;
}

/* animation */

.hidden {
    opacity: 0;
}

@keyframes fade-in {
    from {
        opacity: 0;
        transform: scale(.7, .7)
    }
    to {
        opacity: 1;
    }
}

.fade-in-element {
    animation: fade-in 1.4s;
}

.w3-animate-opacity {
    animation: opac 1.4s
}
.smallnavcontainer{
    display:none;
}

@keyframes opac {
    from {
        opacity: 0
    }
    to {
        opacity: 1
    }
    from {
        transform: scale(0.5)
    }
    to {
        transform: scale(1)
    }
}


  

  @media only screen and (max-width: 800px) {
    header {
        background-image: url("../assets/code_review.jpeg");
        min-height: none;
    }
    .headtext {
        padding: 0px;
    }
    #headerTextContainer {
        text-align: center;
        padding-top: 200px;
    }
    nav {
        display: none;
    }
    
    .smallnavcontainer{
        position:fixed;
        display: flex;
        flex-wrap: wrap;
        background-color: black;
    }
    .smallnav{
        border-bottom-color: rgb(21, 54, 5);
        border-bottom-width: 1px;
        border-bottom-style: solid;        
    }
    .smallnav2, .smallnav{
        width: 100%;
        text-align: center;
    }
    #section4, #section3, #section2 {
        width: 95%;
        margin-left: auto;
        margin-right: auto;
        padding-top:200px;
    }
    /* #section1{
        padding-top: 200px;
    } */
    .progressBarContainer {
        width: 100%;
        margin-left: auto;
        margin-right: auto;
        margin-bottom: 20px
    }
    .section {
        padding-top: 0;
    }
    .curriculumDivider {
        width: 100%;
        display: flex;
        justify-content: space-around;
        flex-wrap: wrap;
    }
    
    .curriculumFlex {
        width: 100%;
        margin: 10px;
    }
    .curriculumFlex50 {
        width: 50%;
        margin: 10px;
    }
  }

